# temper

./: .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py  temper-service.py  temper.py
temper/: temper.py
