[tool.poetry]
name = "temper"
version = "0.1.0"
description = ""
authors = ["urwen"]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
temper = "temper.temper:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
